returned content from assets/html/index-page*.htm , becs of PHP

--- a/index.php.html
+++ b/index.php.html
@@ -2,7 +2,8 @@
 <head>
 
 <!-- # Browser-Tab-Beschriftung -->
-$browserTabName = $jumi;
+<!-- # Variable für basic.htm -->
+	<?php $browserTabName = $jumi; ?>
 
 <!-- # Metadaten -->
 <!-- # Favicon -->
