Content excludiert, index.html fokusiert, flex flow fix plan

--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
-<!DOCTYPE html><html lang="de">
-<head>
-<title>jumi.biz</title>
+<!DOCTYPE html><html lang="de"><head><meta charset="utf-8"><!-- ### Zeichenkodierung -->
+
+<!-- ### Optimierung für Mobilgeräte -->
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<!-- ### HTTP-Header -->
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 <!-- ### Metadaten -->
 <meta name="description" content="IT-Themensammlung und kompaktes Nachschlagewerk">
@@ -9,38 +13,31 @@
 
 <!-- ### Favicon -->
 <link rel="icon" href="assets/ico/favicon.ico">
-
-<!-- ### Kodierung -->
-<meta charset="utf-8">
-
-<!-- ### HTTP-Header -->
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-<!-- ### Optimierung für Mobilgeräte -->
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>jumi.biz</title>
 
 <!-- ### Debuger (falls nötig)
-        <meta http-equiv="refresh"y content="10">
-        <style>* {border: 1px solid red;}</style> -->
+        <meta http-equiv="refresh"y content="6">
+        <style>* {border: 1px solid red;}</style>-->
 
-<!-- ### Layout -->
+<!-- ### Layout
 <link rel="stylesheet" href="assets/css/main.css">
-<link rel="stylesheet" href="assets/css/menu.css">
 <link rel="stylesheet" href="assets/css/content.css">
+<link rel="stylesheet" href="assets/css/modal.css"> -->
+<link rel="stylesheet" href="assets/css/style.css">
 <link rel="stylesheet" href="assets/css/media-queries.css">
-<link rel="stylesheet" href="assets/css/modal.css">
+<link rel="stylesheet" href="assets/css/menu.css">
 
 </head>
-<body>
+<body id=" ଘ(੭*ˊᵕˋ)੭* ̀ˋ hello ɪɴᴛᴇʀɴᴇᴛ ">
 <header>
 
-<!-- ### MENU -->
 <div class="header-content">
 
 <h1 class="jumi-logo">
 <a href="https://www.jumi.biz">jumi.biz</a>&#32;
 </h1>
 
+<!-- ### MENU -->
 <nav class="site-nav">
 <button class="menu-toggle"
         aria-controls="primary-navigation"
@@ -52,9 +49,8 @@
 <ul data-state="closed" class="primary-navigation" id="primary-navigation">
 <li><a href="https://www.jumi.biz/Content"><i class="site-nav--icon"></i>content</a></li>
 <li><a href="https://www.jumi.biz/Links"><i class="site-nav--icon"></i>links</a></li>
-<li><a href="https://www.jumi.biz/Notes"><i class="site-nav--icon"></i>notes</a></li>
 <li><a href="https://www.jumi.biz/Cheats"><i class="site-nav--icon"></i>cheats</a></li>
-<li><a href="https://www.jumi.biz/"><i class="site-nav--icon"></i><span id="wtf">wtf is jumi?</span></a></li>
+<li><a href="https://www.jumi.biz/"><i class="site-nav--icon"></i><span id="wtf-is-jumi">wtf is jumi?</span></a></li>
 
 </ul>
 </nav>
@@ -77,21 +73,22 @@
 <!-- ### INFO -->
 <h2>WTF is Jumi.biz ?</h2>
 	<p>Hier findest du Zusammenfassungen zu verschiedenen Computerthemen. <br><br>
-	<a href="https://www.jumi.biz/Content">Inhalte</a>: Administration, Webentwicklung, Programmierung, und mehr.</p>
-<div class="key-navigation">
+	<imp><a href="https://www.jumi.biz/Content">Inhalte:</a><br></imp>Administration, Webentwicklung, Programmierung, und mehr.</p>
 
 <!-- ### KEYBOARD-NAVIGATION -->
+<div class="flow">
+<link rel="stylesheet" href="assets/css/word-as-button.css">
 <h4>Navigation: </h4>
-    <ol><li><div class="keyboard-button"><span>TAB</span></div> Elemente selektieren </li>
-    <li><div class="keyboard-button"><span>Enter</span></div> Element öffnen </li></ol>
-    <ul><li><div class="keyboard-button"><span>Shift</span></div> + <div class="keyboard-button"><span>TAB</span></div> Elemente rückwärts selektieren </li></ul>
+    <ol><li><div class="keyboard-styled-word"><span>TAB</span></div> Selektieren </li>
+    <li><div class="keyboard-styled-word"><span>Enter</span></div> Öffnen </li></ol>
+    <ul><li>Rückwärts selektieren<br><div class="keyboard-styled-word"><span>Shift</span></div> + <div class="keyboard-styled-word"><span>TAB</span></div></li></ul>
 </div>
 
 </article>
 <article class="content flow">
 
 <!-- ### PROFIL -->
-<h4>$ whoami</h4>
+<h2>$ whoami</h2>
 <div class="flex">
     <img id="modal-01" src="assets/img/profile-img-1.png" alt="Picture shows Jumi" width="80px" height="80px">
     <img id="modal-02" src="assets/img/profile-img-2.png" alt="Picture shows shoe" width="80px" height="80px">
@@ -105,7 +102,7 @@
 <article class="content flow">
 
 <!-- ### PREFERENZ -->
-<h3>Dark Mode Only</h3>
+<h2>Dark Mode Only</h2>
     <p>Ein dunkler Bildschirm spart bis zu 60% Energie und schont die Augen.
     Wenn du den hellen Modus immer noch bevorzugst dann GTFO!<br><br>
     <span class="zitat-referenz">"Come to the Dark Side" <br>-Darth Vader</span></p>
@@ -114,7 +111,7 @@
 <article class="content flow">
 
 <!-- ### FAZIT -->
-<h3>IT ~ Kung Fu</h3>
+<h2>IT ~ Kung Fu</h2>
     <p>Der chinesische Begriff "Kung Fu" bezieht sich auf Fähigkeiten und Techniken,
     die durch lange, harte Übung und Geduld erlangt werden. Eine Disziplin,
     die zur Meisterung viel Engagement und Einsatz erfordert.
@@ -128,7 +125,7 @@
 <article class="content flow">
 
 <!-- ### REFERENZEN -->
-<h3>Shownotes</h3>
+<h2>Shownotes</h2>
     <p>Kommasetzung mit KI: <a href="https://www.komma.ai/#" target="_blank">komma.ai</a></p><br>
     <p>Suchmaschine mit KI: <a href="https://you.com" target="_blank">you.com</a></p><br>
     <p>HTML-Checker: <a href="https://validator.w3.org/" target="_blank">validator.w3.org</a></p><br>
@@ -136,7 +133,6 @@
 
 </article>
 </div>
-
 
 </main>
 <footer>
@@ -147,10 +143,8 @@
 </footer>
 
 <!-- ### Skripte -->
-	<script src="assets/js/menu.js"></script>
+    <script src="assets/js/menu.js"></script>
 	<script src="assets/js/modal.js"></script>
-    <script src="assets/js/highlight.min.js"></script>
-    <script>hljs.highlightAll();</script>
 
 </body>
 </html>
