--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <link rel="stylesheet" href="assets/css/main.css">
 <link rel="stylesheet" href="assets/css/content.css">
 <link rel="stylesheet" href="assets/css/modal.css"> -->
-<link rel="stylesheet" href="assets/css/style.css">
+<link rel="stylesheet" href="assets/css/main.css">
 <link rel="stylesheet" href="assets/css/media-queries.css">
 <link rel="stylesheet" href="assets/css/menu.css">
 
