Bei "Navigation:" noch flow flex formatieren, CSS "keyboard-styled-words", Quellcode Uebersicht verbessert, Kontaktlink fix

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <!-- ### Favicon -->
 <link rel="icon" href="assets/ico/favicon.ico">
-<title>jumi.biz</title>
+<title>jumi</title>
 
 <!-- ### Debuger (falls nötig)
         <meta http-equiv="refresh"y content="6">
@@ -27,7 +27,9 @@
 <link rel="stylesheet" href="assets/css/media-queries.css">
 <link rel="stylesheet" href="assets/css/menu.css">
 
+
 </head>
+
 <body id=" ଘ(੭*ˊᵕˋ)੭* ̀ˋ hello ɪɴᴛᴇʀɴᴇᴛ ">
 <header>
 
@@ -136,15 +138,14 @@
 
 </main>
 <footer>
-
 <!-- ### IMPRESSUM -->
-<?php readfile ('includes/impressum.htm'); ?>
-
+<span class="jumi-contact">contact@jumi.biz</span>
 </footer>
 
 <!-- ### Skripte -->
     <script src="assets/js/menu.js"></script>
 	<script src="assets/js/modal.js"></script>
+    <script src="assets/js/main.js"></script>
 
 </body>
 </html>
