excluded images, removed trash

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta name="author" content="Jumi">
 
 <!-- ### Favicon -->
-<link rel="icon" href="assets/ico/favicon.ico">
+<link rel="icon" href="assets/img/favicon.ico">
 <title>jumi</title>
 
 <!-- ### Debuger (falls nötig)
