modal.js debugging, CSS-Eigenschaften durchsuchen

--- a/index.html
+++ b/index.html
@@ -19,18 +19,17 @@
         <meta http-equiv="refresh"y content="6">
         <style>* {border: 1px solid red;}</style>-->
 
-<!-- ### Layout
-<link rel="stylesheet" href="assets/css/main.css">
-<link rel="stylesheet" href="assets/css/content.css">
-<link rel="stylesheet" href="assets/css/modal.css"> -->
+<!-- ### Layout -->
 <link rel="stylesheet" href="assets/css/main.css">
 <link rel="stylesheet" href="assets/css/media-queries.css">
 <link rel="stylesheet" href="assets/css/menu.css">
+<link rel="stylesheet" href="assets/css/modal.css">
 
 
 </head>
 
 <body id=" ଘ(੭*ˊᵕˋ)੭* ̀ˋ hello ɪɴᴛᴇʀɴᴇᴛ ">
+
 <header>
 
 <div class="header-content">
@@ -92,8 +91,12 @@
 <!-- ### PROFIL -->
 <h2>$ whoami</h2>
 <div class="flex">
-    <img id="modal-01" src="assets/img/profile-img-1.png" alt="Picture shows Jumi" width="80px" height="80px">
-    <img id="modal-02" src="assets/img/profile-img-2.png" alt="Picture shows shoe" width="80px" height="80px">
+    <img id="modal-01"
+    src="assets/img/profile-img-1.png" alt="Picture shows Jumi"
+    width="80" height="80">
+    <img id="modal-02"
+    src="assets/img/profile-img-2.png" alt="Picture shows shoe"
+    width="80" height="80">
 </div>
 
     <p>Mir macht es Spass, mich mit IT zu beschäftigen und grundlegendes Wissen für Lernzwecke in
