--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
-<!DOCTYPE html><html lang="de"><head><meta charset="utf-8"><!-- ### Zeichenkodierung -->
+<!DOCTYPE html><html lang="de"><head><meta charset="utf-8"><!-- Zeichenkodierung -->
 
-<!-- ### Optimierung für Mobilgeräte -->
+<!-- Optimierung für Mobilgeräte -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!-- ### HTTP-Header -->
+<!-- HTTP-Header -->
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-<!-- ### Metadaten -->
+<!-- Metadaten -->
 <meta name="description" content="IT-Themensammlung und kompaktes Nachschlagewerk">
 <meta name="keywords" content="IT,Technologie,Computer,PC,Systeme,Netzwerke,Linux,Windows,Administration,Programmieren,Code,Shell,Terminal,Syntax,Snippets,Vorlagen,Lernen,verstehen">
 <meta name="author" content="Jumi">
 
-<!-- ### Favicon -->
+<!-- Favicon -->
 <link rel="icon" href="assets/img/favicon.ico">
 <title>jumi</title>
 
-<!-- ### Debuger (falls nötig)
+<!-- Debuger (falls nötig)
         <meta http-equiv="refresh"y content="6">
         <style>* {border: 1px solid red;}</style>-->
 
-<!-- ### Layout -->
+<!-- Layout -->
 <link rel="stylesheet" href="assets/css/main.css">
 <link rel="stylesheet" href="assets/css/media-queries.css">
 <link rel="stylesheet" href="assets/css/menu.css">
@@ -38,7 +38,7 @@
 <a href="https://www.jumi.biz">jumi.biz</a>&#32;
 </h1>
 
-<!-- ### MENU -->
+<!-- MENU -->
 <nav class="site-nav">
 <button class="menu-toggle"
         aria-controls="primary-navigation"
@@ -51,7 +51,7 @@
 <li><a href="https://www.jumi.biz/Content"><i class="site-nav--icon"></i>content</a></li>
 <li><a href="https://www.jumi.biz/Links"><i class="site-nav--icon"></i>links</a></li>
 <li><a href="https://www.jumi.biz/Cheats"><i class="site-nav--icon"></i>cheats</a></li>
-<li><a href="https://www.jumi.biz/"><i class="site-nav--icon"></i><span id="wtf-is-jumi">wtf is jumi?</span></a></li>
+<li><a href="https://www.jumi.biz"><i class="site-nav--icon"></i><span id="wtf-is-jumi">wtf is jumi?</span></a></li>
 
 </ul>
 </nav>
@@ -60,23 +60,23 @@
 </header>
 <main>
 
-<!-- ### MAIN -->
+<!-- MAIN -->
 <div class="grid-container">
 <article class="content flow">
 
-<!-- ### INTRO -->
+<!-- INTRO -->
 <h2>print("hello world") </h2>
     <p>Diese Website ist im Aufbau.</p>
 	<ul><li>Update[2022-11]: Neue Snippets</li>
 	<li>Update[2023-03]: Neue index.php</li>
 	<li>Upgrade[2023-08]: Struktur verbessert</li></ul>
 
-<!-- ### INFO -->
+<!-- INFO -->
 <h2>WTF is Jumi.biz ?</h2>
 	<p>Hier findest du Zusammenfassungen zu verschiedenen Computerthemen. <br><br>
 	<imp><a href="https://www.jumi.biz/Content">Inhalte:</a><br></imp>Administration, Webentwicklung, Programmierung, und mehr.</p>
 
-<!-- ### KEYBOARD-NAVIGATION -->
+<!-- KEYBOARD-NAVIGATION -->
 <div class="flow">
 <link rel="stylesheet" href="assets/css/word-as-button.css">
 <h4>Navigation: </h4>
@@ -88,15 +88,17 @@
 </article>
 <article class="content flow">
 
-<!-- ### PROFIL -->
+<!-- PROFIL -->
 <h2>$ whoami</h2>
+
 <div class="flex">
-    <img id="modal-01"
-    src="assets/img/profile-img-1.png" alt="Picture shows Jumi"
-    width="80" height="80">
-    <img id="modal-02"
-    src="assets/img/profile-img-2.png" alt="Picture shows shoe"
-    width="80" height="80">
+
+<div class=""><img id="modal-01" src="assets/img/profile-img-1.png" alt="Picture shows Jumi"></div>
+
+<div class=""><img id="modal-02" src="assets/img/profile-img-2.png" alt="Picture shows shoe"></div>
+
+<div class=""><img id="modal-03" src="assets/img/profile-img-3.png" alt="Picture shows computer"></div>
+
 </div>
 
     <p>Mir macht es Spass, mich mit IT zu beschäftigen und grundlegendes Wissen für Lernzwecke in
@@ -106,7 +108,7 @@
 </article>
 <article class="content flow">
 
-<!-- ### PREFERENZ -->
+<!-- PREFERENZ -->
 <h2>Dark Mode Only</h2>
     <p>Ein dunkler Bildschirm spart bis zu 60% Energie und schont die Augen.
     Wenn du den hellen Modus immer noch bevorzugst dann GTFO!<br><br>
@@ -115,7 +117,7 @@
 </article>
 <article class="content flow">
 
-<!-- ### FAZIT -->
+<!-- FAZIT -->
 <h2>IT ~ Kung Fu</h2>
     <p>Der chinesische Begriff "Kung Fu" bezieht sich auf Fähigkeiten und Techniken,
     die durch lange, harte Übung und Geduld erlangt werden. Eine Disziplin,
@@ -129,7 +131,7 @@
 </article>
 <article class="content flow">
 
-<!-- ### REFERENZEN -->
+<!-- REFERENZEN -->
 <h2>Shownotes</h2>
     <p>Kommasetzung mit KI: <a href="https://www.komma.ai/#" target="_blank">komma.ai</a></p><br>
     <p>Suchmaschine mit KI: <a href="https://you.com" target="_blank">you.com</a></p><br>
@@ -141,11 +143,11 @@
 
 </main>
 <footer>
-<!-- ### IMPRESSUM -->
+<!-- IMPRESSUM -->
 <span class="jumi-contact">contact@jumi.biz</span>
 </footer>
 
-<!-- ### Skripte -->
+<!-- Skripte -->
     <script src="assets/js/menu.js"></script>
 	<script src="assets/js/modal.js"></script>
     <script src="assets/js/main.js"></script>
