modal implemented, alpha-version, fix animations

--- a/index.html
+++ b/index.html
@@ -93,23 +93,31 @@
 
 <div class="flex">
 
-<div class="modal-trigger"><img id="modalTrigger01" src="assets/img/profile-img-1.png" alt="Picture shows Jumi"></div>
+<img id="modalTrigger01" src="assets/img/profile-img-1.png"
+alt="Picture shows Jumi">
+<dialog id="openModal01">
+<img src="assets/img/modal/profile-img-modal-01.png" alt="Image-Modal">
+<h2>Das ist endlich ein Modal</h2>
+<button id="closeModal01"> &times; </button></dialog>
 
-<div class="modal-trigger"><img id="modalTrigger02" src="assets/img/profile-img-2.png" alt="Picture shows shoe"></div>
+<img id="modalTrigger02" src="assets/img/profile-img-2.png"
+alt="Picture shows shoe">
+<dialog id="openModal02">
+<img src="assets/img/modal/profile-img-modal-02.png" alt="Image-Modal">
+<h2>Das ist endlich ein Modal</h2>
+<button id="closeModal02"> &times; </button></dialog>
 
-<div class="modal-trigger"><img id="modalTrigger03" src="assets/img/profile-img-3.png" alt="Picture shows computer"></div>
+<img id="modalTrigger03" src="assets/img/profile-img-3.png"
+alt="Picture shows computer">
+<dialog id="openModal03">
+<img src="assets/img/modal/profile-img-modal-03.png" alt="Image-Modal">
+<h2>Das ist endlich ein Modal</h2>
+<button id="closeModal03"> &times; </button></dialog>
 
 </div>
 
-<div class="modal">
 
-<dialog id=""><img class="modal-content" src="assets/img/modal/profile-img-1.png" alt="Picture shows Jumi"></dialog>
 
-<dialog id=""><img class="modal-content" src="assets/img/modal/profile-img-2.png" alt="Picture shows shoe"></dialog>
-
-<dialog id=""><img class="modal-content" src="assets/img/modal/profile-img-3.png" alt="Picture shows computer"></dialog>
-
-</div>
 
     <p>Mir macht es Spass, mich mit IT zu beschäftigen und grundlegendes Wissen für Lernzwecke in
     visuell-ergonomische Texte zu fragmentieren. Meine Quellen sind öffentliche Personen mit großer Reichweite und private Weiterbildungen.<br><br>
