--- a/index.html
+++ b/index.html
@@ -97,21 +97,21 @@
 alt="Picture shows Jumi">
 <dialog id="openModal01">
 <img src="assets/img/modal/profile-img-modal-01.png" alt="Image-Modal">
-<h2>Das ist endlich ein Modal</h2>
+<h2>Domain User</h2>
 <button id="closeModal01"> &times; </button></dialog>
 
 <img id="modalTrigger02" src="assets/img/profile-img-2.png"
 alt="Picture shows shoe">
 <dialog id="openModal02">
 <img src="assets/img/modal/profile-img-modal-02.png" alt="Image-Modal">
-<h2>Das ist endlich ein Modal</h2>
+<h2>Local Area</h2>
 <button id="closeModal02"> &times; </button></dialog>
 
 <img id="modalTrigger03" src="assets/img/profile-img-3.png"
 alt="Picture shows computer">
 <dialog id="openModal03">
 <img src="assets/img/modal/profile-img-modal-03.png" alt="Image-Modal">
-<h2>Das ist endlich ein Modal</h2>
+<h2>Central Processing Units</h2>
 <button id="closeModal03"> &times; </button></dialog>
 
 </div>
