--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta name="author" content="Jumi">
 
 <!-- Favicon -->
-<link rel="icon" href="assets/ico/jumi.ico">
+<link rel="icon" href="assets/img/ico/jumi.ico">
 <title>jumi</title>
 
 <!-- Debuger (falls nötig)
@@ -27,19 +27,14 @@
 
 
 </head>
-
 <body id=" ଘ(੭*ˊᵕˋ)੭* ̀ˋ hello ɪɴᴛᴇʀɴᴇᴛ ">
-
 <header>
-
 <div class="header-content">
 
-<h1 class="jumi-logo">
-<a href="https://www.jumi.biz">jumi.biz</a>&#32;
-</h1>
+<h1 class="jumi-logo"><a href="https://www.jumi.biz">jumi.biz</a>&#32;</h1>
 
 <!-- MENU -->
-<nav class="site-nav">
+<nav class="menu">
 <button class="menu-toggle"
         aria-controls="primary-navigation"
         aria-expanded="false">
@@ -48,10 +43,14 @@
 </button>
 
 <ul data-state="closed" class="primary-navigation" id="primary-navigation">
-<li><a href="https://www.jumi.biz/Content"><i class="site-nav--icon"></i>content</a></li>
-<li><a href="https://www.jumi.biz/Links"><i class="site-nav--icon"></i>links</a></li>
-<li><a href="https://www.jumi.biz/Cheats"><i class="site-nav--icon"></i>cheats</a></li>
-<li><a href="https://www.jumi.biz"><i class="site-nav--icon"></i><span id="wtf-is-jumi">wtf is jumi?</span></a></li>
+<li><a href="https://www.jumi.biz/Content"><i class="menu-icon">
+<img src="assets/img/ico/menu-content.ico" alt="Content"></i>content</a></li>
+<li><a href="https://www.jumi.biz/Links"><i class="menu-icon">
+<img src="assets/img/ico/menu-links.ico" alt="Links"></i>links</a></li>
+<li><a href="https://www.jumi.biz/Cheats"><i class="menu-icon">
+<img src="assets/img/ico/menu-cheats.ico" alt="Cheats"></i>cheats</a></li>
+<li><a href="https://www.jumi.biz"><i class="menu-icon">
+<img src="assets/img/ico/jumi.ico" alt="WTF is jumi?"></i><span id="wtf-is-jumi">wtf is jumi?</span></a></li>
 
 </ul>
 </nav>
@@ -97,7 +96,7 @@
 alt="Picture shows Jumi">
 <dialog id="openModal01">
 <img src="assets/img/modal/profile-img-modal-01.png" alt="Image-Modal">
-<h2>Domain User</h2>
+<h2>Superuser</h2>
 <button id="closeModal01"> &times; </button></dialog>
 
 <img id="modalTrigger02" src="assets/img/profile-img-2.png"
@@ -162,6 +161,7 @@ alt="Picture shows computer">
 </main>
 <footer>
 <!-- IMPRESSUM -->
+<span class="flex profil-links"><a href="https://github.com/xuser123" target="_blank"><img src="assets/img/ico/github.ico" alt="Github/xuser123"></a>&#32;<a href="https://instagram.com/jumicontent" target="_blank"><img src="assets/img/ico/instagram.ico" alt="Instagram/jumicontent"></a></span>
 <span class="jumi-email">contact&#64;jumi.biz</span>
 </footer>
 
