add icons in menu and footer

--- a/index.html
+++ b/index.html
@@ -168,7 +168,8 @@ alt="Picture shows computer">
 <!-- Skripte -->
     <script src="assets/js/menu.js"></script>
 	<script src="assets/js/modal.js"></script>
-    <!--<script src="assets/js/main.js"></script> -->
+    <!-- for Easteregg Project:
+    <script src="assets/js/read.js"></script> -->
 
 </body>
 </html>
