--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="de"><head><meta charset="utf-8"><!-- Zeichenkodierung -->
+<!DOCTYPE html><html lang="de"><head><meta charset="utf-8">
 
 <!-- Optimierung für Mobilgeräte -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -25,12 +25,12 @@
 <link rel="stylesheet" href="assets/css/modal.css">
 <link rel="stylesheet" href="assets/css/media-queries.css">
 
-
 </head>
 <body id=" ଘ(੭*ˊᵕˋ)੭* ̀ˋ hello ɪɴᴛᴇʀɴᴇᴛ ">
 <header>
 <div class="header-content">
 
+<!-- LOGO -->
 <h1 class="jumi-logo"><a href="https://www.jumi.biz">jumi.biz</a>&#32;</h1>
 
 <!-- MENU -->
@@ -55,7 +55,6 @@
 </ul>
 </nav>
 </div>
-
 </header>
 <main>
 
@@ -66,7 +65,7 @@
 <!-- print("hello world")  -->
 <h2>print("hello world") </h2>
     <p>Diese Website ist im Aufbau.</p>
-	<ul><li>Update[2022-11]: Neue Snippets</li>
+	<ul class="kleintxt"><li>Update[2022-11]: Neue Snippets</li>
 	<li>Update[2023-03]: Neue index.php</li>
 	<li>Upgrade[2023-08]: Struktur verbessert</li></ul>
 
@@ -78,12 +77,13 @@
 <!-- Navigation:  -->
 <div class="flow">
 <link rel="stylesheet" href="assets/css/word-as-button.css">
+
 <h4>Navigation: </h4>
     <ol><li><div class="keyboard-styled-word"><span>TAB</span></div> Selektieren </li>
     <li><div class="keyboard-styled-word"><span>Enter</span></div> Öffnen </li></ol>
     <ul><li>Rückwärts selektieren<br><div class="keyboard-styled-word"><span>Shift</span></div> + <div class="keyboard-styled-word"><span>TAB</span></div></li></ul>
-</div>
 
+</div>
 </article>
 <article class="content flow">
 
@@ -114,9 +114,6 @@ alt="Picture shows computer">
 <button id="closeModal03"> &times; </button></dialog>
 
 </div>
-
-
-
 
     <p>Mir macht es Spass, mich mit IT zu beschäftigen und grundlegendes Wissen für Lernzwecke in
     visuell-ergonomische Texte zu fragmentieren. Meine Quellen sind öffentliche Personen mit großer Reichweite und private Weiterbildungen.<br><br>
@@ -150,19 +147,20 @@ alt="Picture shows computer">
 
 <!-- Shownotes -->
 <h2>Shownotes</h2>
-    <p>Kommasetzung mit KI: <a href="https://www.komma.ai/#" target="_blank">komma.ai</a></p><br>
-    <p>Suchmaschine mit KI: <a href="https://you.com" target="_blank">you.com</a></p><br>
-    <p>HTML-Checker: <a href="https://validator.w3.org/" target="_blank">validator.w3.org</a></p><br>
-    <p>CSS-Checker: <a href="https://jigsaw.w3.org/css-validator/" target="_blank">jigsaw.w3.org/css-validator</a></p><br>
+	<ul><li>Kommasetzung mit KI: <a href="https://www.komma.ai/#" target="_blank">komma.ai</a></li>
+	<li>Suchmaschine mit KI: <a href="https://you.com" target="_blank">you.com</a></li>
+	<li>HTML-Checker: <a href="https://validator.w3.org/" target="_blank">validator.w3.org</a></li>
+	<li>CSS-Checker: <a href="https://jigsaw.w3.org/css-validator/" target="_blank">jigsaw.w3.org/css-validator</a></li></ul>
 
 </article>
 </div>
-
 </main>
+
 <footer>
 <!-- IMPRESSUM -->
 <span class="flex profil-links"><a href="https://github.com/xuser123" target="_blank"><img src="assets/img/ico/github.ico" alt="Github/xuser123"></a>&#32;<a href="https://instagram.com/jumicontent" target="_blank"><img src="assets/img/ico/instagram.ico" alt="Instagram/jumicontent"></a></span>
 <span class="jumi-email">contact&#64;jumi.biz</span>
+<span class="flex siteFeatures"><a id="exportIcon"><img src="assets/img/ico/exportPDF.ico" alt="Export as PDF"></a>&#32;<a id="scrollToTop" href="#"><img src="assets/img/ico/backTop.ico" alt="Back to Top"></a></span>
 </footer>
 
 <!-- Skripte -->
@@ -170,6 +168,10 @@ alt="Picture shows computer">
 	<script src="assets/js/modal.js"></script>
     <!-- for Easteregg Project:
     <script src="assets/js/read.js"></script> -->
+
+    <!-- PDF-Export-Script (jsPDF):
+https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js
+<script src="assets/js/jspdf.umd.min.js"> -->
 
 </body>
 </html>
