Site-Features added in Footer, moved "Shownotes" into <ul>

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ alt="Picture shows computer">
 <article class="content flow">
 
 <!-- IT ~ Kung Fu -->
-<h2>IT ~ Kung Fu</h2>
+<h2>IT &#126; Kung Fu</h2>
     <p>Der chinesische Begriff "Kung Fu" bezieht sich auf Fähigkeiten und Techniken,
     die durch lange, harte Übung und Geduld erlangt werden. Eine Disziplin,
     die zur Meisterung viel Engagement und Einsatz erfordert.
@@ -159,7 +159,9 @@ alt="Picture shows computer">
 <footer>
 <!-- IMPRESSUM -->
 <span class="flex profil-links"><a href="https://github.com/xuser123" target="_blank"><img src="assets/img/ico/github.ico" alt="Github/xuser123"></a>&#32;<a href="https://instagram.com/jumicontent" target="_blank"><img src="assets/img/ico/instagram.ico" alt="Instagram/jumicontent"></a></span>
+<!-- contact@jumi.biz -->
 <span class="jumi-email">contact&#64;jumi.biz</span>
+<!-- Site Features -->
 <span class="flex siteFeatures"><a id="exportIcon"><img src="assets/img/ico/exportPDF.ico" alt="Export as PDF"></a>&#32;<a id="scrollToTop" href="#"><img src="assets/img/ico/backTop.ico" alt="Back to Top"></a></span>
 </footer>
 
