Site-Features in Footer, "Shownotes" into <ul>, menu less padding

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ alt="Picture shows computer">
 
     <p>Mir macht es Spass, mich mit IT zu beschäftigen und grundlegendes Wissen für Lernzwecke in
     visuell-ergonomische Texte zu fragmentieren. Meine Quellen sind öffentliche Personen mit großer Reichweite und private Weiterbildungen.<br><br>
-    <span class="kleintxt">"Wer? Wer ist nur die Form als Konsequenz der Funktion des Was. Und was ich bin, das ist ein Mann mit Maske!" <br>-V wie Vendetta (2005)</span></p>
+    <span class="kleintxt">"Wer? Wer ist nur die Form als Konsequenz der Funktion des Was. Und was ich bin, das ist ein Mann mit Maske!" <br><br>-V wie Vendetta (2005)</span></p>
 
 </article>
 <article class="content flow">
@@ -158,7 +158,7 @@ alt="Picture shows computer">
 
 <footer>
 <!-- IMPRESSUM -->
-<span class="flex profil-links"><a href="https://github.com/xuser123" target="_blank"><img src="assets/img/ico/github.ico" alt="Github/xuser123"></a>&#32;<a href="https://instagram.com/jumicontent" target="_blank"><img src="assets/img/ico/instagram.ico" alt="Instagram/jumicontent"></a></span>
+<span class="flex profil-links"><a id="githubIcon" href="https://github.com/xuser123" target="_blank"><img src="assets/img/ico/github.ico" alt="Github/xuser123"></a>&#32;<a  id="instagramIcon" href="https://instagram.com/jumicontent" target="_blank"><img src="assets/img/ico/instagram.ico" alt="Instagram/jumicontent"></a></span>
 <!-- contact@jumi.biz -->
 <span class="jumi-email">contact&#64;jumi.biz</span>
 <!-- Site Features -->
