Site-Features in Footer, "Shownotes" into <ul>, menu less padding

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 alt="Picture shows Jumi">
 <dialog id="openModal01">
 <img src="assets/img/modal/profile-img-modal-01.png" alt="Image-Modal">
-<h2>Superuser</h2>
+<h2>Human Interface</h2>
 <button id="closeModal01"> &times; </button></dialog>
 
 <img id="modalTrigger02" src="assets/img/profile-img-2.png"
@@ -110,7 +110,7 @@ alt="Picture shows shoe">
 alt="Picture shows computer">
 <dialog id="openModal03">
 <img src="assets/img/modal/profile-img-modal-03.png" alt="Image-Modal">
-<h2>Central Processing Units</h2>
+<h2>Central Processing</h2>
 <button id="closeModal03"> &times; </button></dialog>
 
 </div>
