Themen und Inhalte einfügen/erstellen/zusammenführen

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 <ul data-state="closed" class="primary-navigation" id="primary-navigation">
 <li><a href="https://www.jumi.biz/Content"><i class="menu-icon">
 <img src="assets/img/ico/menu-content.ico" alt="Content"></i>content</a></li>
-<li><a href="https://www.jumi.biz/Links"><i class="menu-icon">
+<li><a href="https://www.jumi.biz/pages/Links"><i class="menu-icon">
 <img src="assets/img/ico/menu-links.ico" alt="Links"></i>links</a></li>
-<li><a href="https://www.jumi.biz/Cheats"><i class="menu-icon">
+<li><a href="https://www.jumi.biz/pages/Cheats"><i class="menu-icon">
 <img src="assets/img/ico/menu-cheats.ico" alt="Cheats"></i>cheats</a></li>
 <li><a href="https://www.jumi.biz"><i class="menu-icon">
 <img src="assets/img/ico/jumi.ico" alt="WTF is jumi?"></i><span id="wtf-is-jumi">wtf is jumi?</span></a></li>
