added suffix for /Content

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ snippets,vorlagen,lernen,verstehen,
 </button>
 
 <ul data-state="closed" class="primary-navigation" id="primary-navigation">
-<li><a href="https://www.jumi.biz/Content"><i class="menu-icon">
+<li><a href="https://www.jumi.biz/Content.htm"><i class="menu-icon">
 <img src="assets/img/ico/menu-content.ico" alt="Content"></i>content</a></li>
 <li><a href="https://www.jumi.biz/pages/Links"><i class="menu-icon">
 <img src="assets/img/ico/menu-links.ico" alt="Links"></i>links</a></li>
