formatted html unfinished

--- a/pages/IT-Sicherheit.html
+++ b/pages/IT-Sicherheit.html
@@ -1,15 +1,5 @@
-<!DOCTYPE html>
-<html lang="de">
-<head>
-<?php $Seite = "Jumi |KRITIS"; include ('./includes/header.php'); ?>
-</head>
-<body>
-<header>
-<?php $Pfad = "/Kritis-BSI-Gesetze"; include ('./includes/nav.php'); ?>
-</header>
-<main>
-<div class="grid-container">
-<article class="content flow">
+<!DOCTYPE html><html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><meta http-equiv="X-UA-Compatible" content="IE=edge"><link rel="stylesheet" href="../assets/css/main.css"><style>*{font-family: Verdana, Arial, Helvetica, sans-serif;};</style></head><body><main><div class="grid-content"><article class="content flow">
+
 <h1>KRITIS = Kritische Infrastrukuren</h1>
 <h2><b>§ 2 Abs. 10 BSI-Gesetz (BSIG)</b></h2>
 <p>Kritische Infrastrukturen <i>sind <b><i>Einrichtungen</i></b>, <b><i>Anlagen</i></b> oder <b><i>Teile</i></b> davon, die den Sektoren:</i></p>
@@ -315,4 +305,4 @@
 </body>
 </html>
 
-
+</article></div></main></body></html>
