inserted html, fixed URLs

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@ snippets,vorlagen,lernen,verstehen,
 <ul data-state="closed" class="primary-navigation" id="primary-navigation">
 <li><a href="https://www.jumi.biz/Content.htm"><i class="menu-icon">
 <img src="assets/img/ico/menu-content.ico" alt="Content"></i>content</a></li>
-<li><a href="https://www.jumi.biz/pages/Links"><i class="menu-icon">
+<li><a href="https://www.jumi.biz/pages/Links.htm"><i class="menu-icon">
 <img src="assets/img/ico/menu-links.ico" alt="Links"></i>links</a></li>
-<li><a href="https://www.jumi.biz/pages/Cheats"><i class="menu-icon">
+<li><a href="https://www.jumi.biz/pages/Cheats.htm"><i class="menu-icon">
 <img src="assets/img/ico/menu-cheats.ico" alt="Cheats"></i>cheats</a></li>
 <li><a href="https://www.jumi.biz"><i class="menu-icon">
 <img src="assets/img/ico/jumi.ico" alt="WTF is Jumi?"></i><span id="wtf-is-jumi">wtf is jumi?</span></a></li>
@@ -79,7 +79,7 @@ snippets,vorlagen,lernen,verstehen,
 <!-- WTF is Jumi.biz ? -->
 <h2>WTF is Jumi.biz ?</h2>
 	<p>Hier findest du Zusammenfassungen zu verschiedenen Computerthemen. <br><br>
-	<b><a  href="https://www.jumi.biz/Content">Inhalte:</a></b><br>Administration, Webentwicklung, Programmierung, und mehr.</p>
+	<b><a  href="https://www.jumi.biz/Content.htm">Inhalte:</a></b><br>Administration, Webentwicklung, Programmierung, und mehr.</p>
 
 <!-- Navigation:  -->
 <div class="flow">
