--- a/pages/IT-Sicherheit.htm
+++ b/pages/IT-Sicherheit.htm
@@ -1,4 +1,73 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><meta http-equiv="X-UA-Compatible" content="IE=edge"><link rel="stylesheet" href="../assets/css/main.css"><style>*{font-family: Verdana, Arial, Helvetica, sans-serif;};</style></head><body><main><div class="grid-content"><article class="content flow">
+<!DOCTYPE html><html lang="de"><head><meta charset="utf-8">
+
+<!-- Optimierung für Mobilgeräte -->
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<!-- HTTP-Header -->
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+<!-- Metadaten -->
+<meta name="description" content="
+
+
+
+
+"><meta name="keywords" content="
+
+
+
+
+"><meta name="author" content="Jumi">
+
+<!-- Favicon -->
+<link rel="icon" href="../assets/img/ico/jumi.ico">
+<title>jumi</title>
+
+<!-- Debuger (falls nötig)
+        <meta http-equiv="refresh"y content="6">
+        <style>* {border: 1px solid red;}</style>-->
+
+<!-- Layout -->
+<link rel="stylesheet" href="../assets/css/main.css">
+<link rel="stylesheet" href="../assets/css/menu.css">
+<link rel="stylesheet" href="../assets/css/modal.css">
+<link rel="stylesheet" href="../assets/css/media-queries.css">
+
+</head>
+<body id=" ଘ(੭*ˊᵕˋ)੭* ̀ˋ hello ɪɴᴛᴇʀɴᴇᴛ ">
+<header>
+<div class="header-content">
+
+<!-- LOGO -->
+<h1 class="jumi-logo"><a href="https://www.jumi.biz">jumi.biz</a>&#32;</h1>
+
+<!-- MENU -->
+<nav class="menu">
+<button class="menu-toggle"
+        aria-controls="primary-navigation"
+        aria-expanded="false">
+  <span class="visually-hidden">Menu</span>
+  <div class="hamburger" aria-hidden="true"></div>
+</button>
+
+<ul data-state="closed" class="primary-navigation" id="primary-navigation">
+<li><a href="https://www.jumi.biz/Content.htm"><i class="menu-icon">
+<img src="../assets/img/ico/menu-content.ico" alt="Content"></i>content</a></li>
+<li><a href="https://www.jumi.biz/pages/Links.htm"><i class="menu-icon">
+<img src="../assets/img/ico/menu-links.ico" alt="Links"></i>links</a></li>
+<li><a href="https://www.jumi.biz/pages/Cheats.htm"><i class="menu-icon">
+<img src="../assets/img/ico/menu-cheats.ico" alt="Cheats"></i>cheats</a></li>
+<li><a href="https://www.jumi.biz"><i class="menu-icon">
+<img src="../assets/img/ico/jumi.ico" alt="WTF is Jumi?"></i><span id="wtf-is-jumi">wtf is jumi?</span></a></li>
+
+</ul>
+</nav>
+</div>
+</header>
+<main>
+
+<div class="grid-container">
+<article class="content flow">
 
 <h1>KRITIS = Kritische Infrastrukuren</h1>
 <h2><b>§ 2 Abs. 10 BSI-Gesetz (BSIG)</b></h2>
@@ -296,13 +365,29 @@
    </li>
    <li>Macht des Sektors: Geldabhängigkeit</li>
 </ul>
+
 </article>
 </div>
 </main>
-   <footer>
-	   <?php readfile ('./includes/footer.htm'); ?>
-   </footer>
+
+<footer>
+<!-- IMPRESSUM -->
+<span class="flex profil-links"><a id="githubIcon" href="https://github.com/xuser123" target="_blank"><img src="../assets/img/ico/github.ico" alt="Github/xuser123"></a>&#32;<a  id="instagramIcon" href="https://instagram.com/jumicontent" target="_blank"><img src="../assets/img/ico/instagram.ico" alt="Instagram/jumicontent"></a></span>
+<!-- contact@jumi.biz -->
+<span class="jumi-email">contact&#64;jumi.biz</span>
+<!-- Site Features -->
+<span class="flex siteFeatures"><a id="exportIcon"><img src="../assets/img/ico/exportPDF.ico" alt="Export as PDF"></a>&#32;<a id="scrollToTop" href="#"><img src="../assets/img/ico/backTop.ico" alt="Back to Top"></a></span>
+</footer>
+
+<!-- Skripte -->
+    <script src="../assets/js/menu.js"></script>
+	<script src="../assets/js/modal.js"></script>
+    <!-- for Easteregg Project:
+    <script src="../assets/js/read.js"></script> -->
+
+    <!-- PDF-Export-Script (jsPDF):
+https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js
+<script src="../assets/js/jspdf.umd.min.js"> -->
+
 </body>
 </html>
-
-</article></div></main></body></html>
