added boltNoGlowing id for normal bolt font

--- a/pages/IT-Sicherheit.htm
+++ b/pages/IT-Sicherheit.htm
@@ -67,7 +67,7 @@
 <main>
 
 <div class="grid-container">
-<article class="content flow">
+<article class="content flow" id="boltNoGlowing">
 
 <h1>KRITIS = Kritische Infrastrukuren</h1>
 <h2><b>§ 2 Abs. 10 BSI-Gesetz (BSIG)</b></h2>
