added boltNoGlowing id for normal bolt font

--- a/pages/IT-Sicherheit.htm
+++ b/pages/IT-Sicherheit.htm
@@ -70,7 +70,7 @@
 <article class="content flow" id="boltNoGlowing">
 
 <h1>KRITIS = Kritische Infrastrukuren</h1>
-<h2><b>§ 2 Abs. 10 BSI-Gesetz (BSIG)</b></h2>
+<h2>§ 2 Abs. 10 BSI-Gesetz (BSIG)</h2>
 <p>Kritische Infrastrukturen <i>sind <b><i>Einrichtungen</i></b>, <b><i>Anlagen</i></b> oder <b><i>Teile</i></b> davon, die den Sektoren:</i></p>
 <ul>
    <li>Energie</li>
@@ -83,7 +83,7 @@
 </ul>
 <p><i>angehören und von <b><i>hoher Bedeutung</i></b> für das <b><i>Funktionieren des Gemeinwesens</i></b> sind, weil durch ihren <b><i>Ausfall</i></b> oder ihre <b><i>Beeinträchtigung</i></b> erherbliche <b><i>Versorgungsengpässe</i></b> oder <b><i>Gefährdungen</i></b> für die <b><i>öffentliche Sicherheit</i></b> eintreten würden.</i></p>
 
-<h2><b>§ 8a Abs. 3 BSI-Gesetz (BSIG)</b></h2>
+<h2>§ 8a Abs. 3 BSI-Gesetz (BSIG)</h2>
 <h3>Pflichten für Kritis-Betreiber</h3>
 <ul>
    <li>IT-Sicherheits<b>maßnahmen ergreifen</b></li>
@@ -92,7 +92,7 @@
    <li><b>Meldung</b> <i>von außergewöhnlichen IT-Sicherheitsvorfällen an das BSI</i></li>
    <li><b>Berücksichtigung</b> <i>der BSI-Warnungen und -Lagebilder</i></li>
 </ul>
-<h2><b>§§ 2 bis 8 BSI-KRITIS-Verordnung (BSI-KritisV)</b></h2>
+<h2>§§ 2 bis 8 BSI-KRITIS-Verordnung (BSI-KritisV)</h2>
 <ul>
    <li><b>Gemeinwohlschwelle</b>: ab 500.000 betroffene Personen</li>
    <li>
