removed boltNoGLowing id

--- a/pages/IT-Sicherheit.htm
+++ b/pages/IT-Sicherheit.htm
@@ -71,7 +71,7 @@
 
 <h1>KRITIS = Kritische Infrastrukuren</h1>
 <h2>§ 2 Abs. 10 BSI-Gesetz (BSIG)</h2>
-<p  id="boltNoGlowing">Kritische Infrastrukturen <i>sind <b><i>Einrichtungen</i></b>, <b><i>Anlagen</i></b> oder <b><i>Teile</i></b> davon, die den Sektoren:</i></p>
+<p>Kritische Infrastrukturen <i>sind <b><i>Einrichtungen</i></b>, <b><i>Anlagen</i></b> oder <b><i>Teile</i></b> davon, die den Sektoren:</i></p>
 <ul>
    <li>Energie</li>
    <li>Informationstechnik &amp; Telekommunikation</li>
@@ -81,7 +81,7 @@
    <li>Ernährung</li>
    <li>Finanz- &amp; Versicherungswesen</li>
 </ul>
-<p  id="boltNoGlowing"><i>angehören und von <b><i>hoher Bedeutung</i></b> für das <b><i>Funktionieren des Gemeinwesens</i></b> sind, weil durch ihren <b><i>Ausfall</i></b> oder ihre <b><i>Beeinträchtigung</i></b> erherbliche <b><i>Versorgungsengpässe</i></b> oder <b><i>Gefährdungen</i></b> für die <b><i>öffentliche Sicherheit</i></b> eintreten würden.</i></p>
+<p><i>angehören und von <b><i>hoher Bedeutung</i></b> für das <b><i>Funktionieren des Gemeinwesens</i></b> sind, weil durch ihren <b><i>Ausfall</i></b> oder ihre <b><i>Beeinträchtigung</i></b> erhebliche <b><i>Versorgungsengpässe</i></b> oder <b><i>Gefährdungen</i></b> für die <b><i>öffentliche Sicherheit</i></b> eintreten würden.</i></p>
 
 <h2>§ 8a Abs. 3 BSI-Gesetz (BSIG)</h2>
 <h3>Pflichten für Kritis-Betreiber</h3>
