--- a/pages/Projektmanagement.htm
+++ b/pages/Projektmanagement.htm
@@ -91,7 +91,7 @@ Projektmanagement,Methoden undModelle,Teamarbeit,Wirtschaftlichkeit,Märkte,Beda
 </li><li> rechtlich
 </li><li> terminlich
 
-</ul><h2> SMART-Regel
+</li></ul><h2> SMART-Regel
 </h2><ul><li> spezifisch
 </li><li> messbar
 </li><li> attraktiv
