added container splitting

--- a/pages/Projektmanagement.htm
+++ b/pages/Projektmanagement.htm
@@ -98,6 +98,11 @@ Projektmanagement,Methoden undModelle,Teamarbeit,Wirtschaftlichkeit,Märkte,Beda
 </li><li> realistisch
 </li><li> terminiert
 
+
+</article></div>
+<div class="grid-container">
+<article class="content flow">
+
 </ul><h3> Machbarkeitsanalyse
 </h3><ul><li> <b>Risikoanalyse
 </b></li><li> <b>Stakeholderanalyse
@@ -112,7 +117,6 @@ Projektmanagement,Methoden undModelle,Teamarbeit,Wirtschaftlichkeit,Märkte,Beda
 
 </li></ul><h3> Risikoanalyse
 </h3><p> Potentielle Probleme vor und nach Projekt, in Prozessen identifieren und Lösungen entwickeln.
-
 </p><ul><li> 1. Risiken identifizieren,
 </li><li> 2. analysieren, beurteilen,
 </li><li> 3. priorisieren, kommunizieren,
@@ -135,6 +139,10 @@ Projektmanagement,Methoden undModelle,Teamarbeit,Wirtschaftlichkeit,Märkte,Beda
 </li><li> Auftraggeber
 </li><li> Sponsoren / Investoren
 </li><li> Projekt-betreffendes Interesse
+
+</article></div>
+<div class="grid-container">
+<article class="content flow">
 
 </li></ul><h3> Stakeholderanalyse
 </h3><ul><li> gemeinsame Ziele,
@@ -182,6 +190,10 @@ Projektmanagement,Methoden undModelle,Teamarbeit,Wirtschaftlichkeit,Märkte,Beda
 </li><li> Testszenarien
 </li><li> Risikoanalyse
 </li><li> Lizenzen
+
+</article></div>
+<div class="grid-container">
+<article class="content flow">
 
 </li></ul></ul><h3> Projektleiter-Aufgaben
 </h3><ul><li> Auf Zieldefinition mitwirken
@@ -240,6 +252,10 @@ Projektmanagement,Methoden undModelle,Teamarbeit,Wirtschaftlichkeit,Märkte,Beda
 </li><li> mit Standards / Normen,
 </li><li> Managementsysteme
 
+</article></div>
+<div class="grid-container">
+<article class="content flow">
+
 </li></ul><h4> Planung
 </h4><ul><li> Projektstrukturplan,
 </li><li> <b>Netzplan</b> (visuell),
@@ -288,6 +304,10 @@ Projektmanagement,Methoden undModelle,Teamarbeit,Wirtschaftlichkeit,Märkte,Beda
 </li><li> Aktivitätendauer visualisieren
 </li><li> Pufferzeiten markieren
 </li><li> Für &quot;kurze&quot; Projektdauer geeignet.
+
+</article></div>
+<div class="grid-container">
+<article class="content flow">
 
 </li></ul><h3> Kanban Board
 </h3><ul></li><li> WIP-Limit (work in progress)
