fix tabindex for logo and menu

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ snippets,vorlagen,lernen,verstehen,
 <div class="header-content">
 
 <!-- LOGO -->
-<h1 class="jumi-logo"><a href="https://www.jumi.biz" tabindex="0">jumi.biz</a>&#32;</h1>
+<h1 class="jumi-logo"><a href="https://www.jumi.biz" tabindex="1">jumi.biz</a>&#32;</h1>
 
 <!-- MENU -->
 <nav class="menu">
@@ -51,13 +51,13 @@ snippets,vorlagen,lernen,verstehen,
 </button>
 
 <ul data-state="closed" class="primary-navigation" id="primary-navigation">
-<li><a href="https://www.jumi.biz/Content.htm"><i class="menu-icon">
+<li><a href="https://www.jumi.biz/Content.htm" tabindex="1"><i class="menu-icon">
 <img src="assets/img/ico/menu-content.ico" alt="Content"></i>content</a></li>
-<li><a href="https://www.jumi.biz/pages/Links.htm"><i class="menu-icon">
+<li><a href="https://www.jumi.biz/pages/Links.htm" tabindex="1"><i class="menu-icon">
 <img src="assets/img/ico/menu-links.ico" alt="Links"></i>links</a></li>
-<li><a href="https://www.jumi.biz/pages/Cheats.htm"><i class="menu-icon">
+<li><a href="https://www.jumi.biz/pages/Cheats.htm" tabindex="1"><i class="menu-icon">
 <img src="assets/img/ico/menu-cheats.ico" alt="Cheats"></i>cheats</a></li>
-<li><a href="https://www.jumi.biz"><i class="menu-icon">
+<li><a href="https://www.jumi.biz" tabindex="1"><i class="menu-icon">
 <img src="assets/img/ico/jumi.ico" alt="WTF is Jumi?"></i><span id="wtf-is-jumi">wtf is jumi?</span></a></li>
 
 </ul>
