--- a/index.html
+++ b/index.html
@@ -38,26 +38,25 @@ snippets,vorlagen,lernen,verstehen,
 <div class="header-content">
 
 <!-- LOGO -->
-<h1 class="jumi-logo"><a href="https://www.jumi.biz" tabindex="1">jumi.biz</a>&#32;</h1>
+<h1 class="jumi-logo"><a href="https://www.jumi.biz">jumi.biz</a>&#32;</h1>
 
 <!-- MENU -->
 <nav class="menu">
 <button class="menu-toggle"
         aria-controls="primary-navigation"
-        aria-expanded="false"
-        tabindex="1">
+        aria-expanded="false">
   <span class="visually-hidden">Menu</span>
   <div class="hamburger" aria-hidden="true"></div>
 </button>
 
 <ul data-state="closed" class="primary-navigation" id="primary-navigation">
-<li><a href="https://www.jumi.biz/Content.htm" tabindex="1"><i class="menu-icon">
+<li><a href="https://www.jumi.biz/Content.htm"><i class="menu-icon">
 <img src="assets/img/ico/menu-content.ico" alt="Content"></i>content</a></li>
-<li><a href="https://www.jumi.biz/pages/Links.htm" tabindex="1"><i class="menu-icon">
+<li><a href="https://www.jumi.biz/pages/Links.htm"><i class="menu-icon">
 <img src="assets/img/ico/menu-links.ico" alt="Links"></i>links</a></li>
-<li><a href="https://www.jumi.biz/pages/Cheats.htm" tabindex="1"><i class="menu-icon">
+<li><a href="https://www.jumi.biz/pages/Cheats.htm"><i class="menu-icon">
 <img src="assets/img/ico/menu-cheats.ico" alt="Cheats"></i>cheats</a></li>
-<li><a href="https://www.jumi.biz" tabindex="1"><i class="menu-icon">
+<li><a href="https://www.jumi.biz"><i class="menu-icon">
 <img src="assets/img/ico/jumi.ico" alt="WTF is Jumi?"></i><span id="wtf-is-jumi">wtf is jumi?</span></a></li>
 
 </ul>
@@ -80,7 +79,7 @@ snippets,vorlagen,lernen,verstehen,
 <!-- WTF is Jumi.biz ? -->
 <h2>WTF is Jumi.biz ?</h2>
 	<p>Hier findest du Zusammenfassungen zu verschiedenen Computerthemen. <br><br>
-	<b><a href="https://www.jumi.biz/Content.htm" tabindex="2">Inhalte:</a></b><br>Administration, Webentwicklung, Programmierung, und mehr.</p>
+	<b><a  href="https://www.jumi.biz/Content.htm">Inhalte:</a></b><br>Administration, Webentwicklung, Programmierung, und mehr.</p>
 
 <!-- Navigation:  -->
 <div class="flow">
@@ -101,21 +100,21 @@ snippets,vorlagen,lernen,verstehen,
 <div class="flex">
 
 <img id="modalTrigger01" src="assets/img/profile-img-1.png"
-alt="Picture shows Jumi" tabindex="3">
+alt="Picture shows Jumi">
 <dialog id="openModal01">
 <img src="assets/img/modal/profile-img-modal-01.png" alt="Image-Modal">
 <h2>Human Interface</h2>
 <button id="closeModal01"> &times; </button></dialog>
 
 <img id="modalTrigger02" src="assets/img/profile-img-2.png"
-alt="Picture shows shoe" tabindex="4">
+alt="Picture shows shoe">
 <dialog id="openModal02">
 <img src="assets/img/modal/profile-img-modal-02.png" alt="Image-Modal">
 <h2>Local Area</h2>
 <button id="closeModal02"> &times; </button></dialog>
 
 <img id="modalTrigger03" src="assets/img/profile-img-3.png"
-alt="Picture shows computer" tabindex="5">
+alt="Picture shows computer">
 <dialog id="openModal03">
 <img src="assets/img/modal/profile-img-modal-03.png" alt="Image-Modal">
 <h2>Central Processing</h2>
