--- a/404.html
+++ b/404.html
@@ -25,7 +25,7 @@
 <main>
 
 <div class="content">
-<h1>500 Internal Server Error</h1>
+<h1>404 Page Not Found</h1>
 <p><b>¯\_(ツ)_/¯</b><br>Diese Seite ist nicht verfügbar...<br>
 ...oder der Link nicht mehr aktuell.</p>
 </div>
