--- a/404.html
+++ b/404.html
@@ -24,10 +24,13 @@
 </header>
 <main>
 
-<div class="content">
+<div class="content jumi-email">
 <h1>404 Page Not Found</h1>
-<p><b>¯\_(ツ)_/¯</b><br>Diese Seite ist nicht verfügbar...<br>
+<h1><b>¯\_(ツ)_/¯</b></h1>
+<p>Diese Seite ist nicht verfügbar...<br>
 ...oder der Link nicht mehr aktuell.</p>
+<!-- contact@jumi.biz -->
+<span>contact&#64;jumi.biz</span>
 </div>
 
 </main>
