modal debugging, 404 cosmetics

--- a/404.html
+++ b/404.html
@@ -28,9 +28,10 @@
 <h1>404 Page Not Found</h1>
 <h1><b>¯\_(ツ)_/¯</b></h1>
 <p>Diese Seite ist nicht verfügbar...<br>
-...oder der Link nicht mehr aktuell.</p>
-<!-- contact@jumi.biz -->
-<span>contact&#64;jumi.biz</span>
+...oder in einem anderen Verzeichnis.</p>
+<br>
+<!-- webmaster@jumi.biz -->
+<h2>contact&#64;jumi.biz</h2>
 </div>
 
 </main>
